css/main.css
@font-face {
  font-family: 'JosefinSans';
  font-display: swap;
  src: url('../fonts/JosefinSans-Regular.woff2');
}
@font-face {
  font-family: 'JosefinSans';
  font-display: swap;
  src: url('../fonts/JosefinSans-Bold.woff2');
  font-weight: bold;
}
@font-face {
  font-family: 'NunitoSans';
  font-display: swap;
  src: url('../fonts/NunitoSans-Regular.woff2');
}
@font-face {
  font-family: 'NunitoSans';
  font-display: swap;
  src: url('../fonts/NunitoSans-Bold.woff2');
  font-weight: bold;
}

/* HTML Tags */

body {
  margin: 0;
  font-family: 'NunitoSans', Arial, Helvetica, sans-serif;
  font-size: 16px;
}
a,
a:visited {
  color: #F5B63F;
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
}
h1 {
  font-family: 'JosefinSans', Arial, Helvetica, sans-serif;
  font-weight: bold;
  font-size: 32px;
}
p {
  margin: 6px 0;
}

table {
  margin: 20px 0;
  width: 100%;
  border-collapse: collapse;
}

th, td {
  padding: 6px 12px;
}
tbody tr th:first-child,
tbody tr td:first-child {
  font-size: 12px;
  width: 40%;
}
tbody tr th:nth-child(2),
tbody tr td:nth-child(2) {
  font-weight: bold;
  font-size: 16px;
  text-align: center;
  width: 20%;
  background-color: rgba(229, 228, 226, 0.5);
}
tbody tr th:nth-child(3),
tbody tr td:nth-child(3) {
  font-weight: bold;
  font-size: 16px;
  text-align: center;
  width: 20%;
  background-color: rgba(255, 215, 0, 0.5);
}
tbody tr th:nth-child(4),
tbody tr td:nth-child(4) {
  font-weight: bold;
  font-size: 16px;
  text-align: center;
  width: 20%;
  background-color: rgba(192, 192, 192, 0.5);
}
tbody tr:nth-child(odd) {
  background-color: rgba(200,200,200,0.25);
}
tbody tr:nth-child(even) {
  background-color: rgba(240,240,240,0.25);
}

.list-founders {
  display: flex;
  flex-wrap: wrap;
  padding: 0;
}
.list-founders li {
  margin: 0;
  padding: 0;
  margin-left: 24px;
}
.list-founders li:first-child {
  list-style-type: none;
  margin-left: 0;
}

/* Layout */

.wrapper {
  display: flex;
  flex-direction: column;
}
.main-wrapper {
  margin: 60px 20px;
}
.main-wrapper a,
.main-wrapper a:visited {
  text-decoration: underline;
  color: rgb(177, 120, 15);
}
.main-intro {
  position: relative;
}
.main-intro-pictures {
  display: flex;
  flex-flow: row wrap;
  align-items: center;
}
.main-intro-pictures img {
  width: 50%;
  height: auto;
}
.main-intro-logo {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%
}
.main-intro-logo div {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: rgba(255,255,255,0.1);
}
.main-intro-logo div img {
  border-radius: 50%;
  background-color: white;
  padding: 20px;
}
.aside {
  z-index: 1;
  background-color: #222;
  color: #dedede;
  font-family: 'JosefinSans', Arial, Helvetica, sans-serif;
  box-shadow: 0 0 6px #222;
}
.aside-wrapper {
  display: flex;
  flex-direction: column;
  margin: 24px;
}
.alert {
  background-color: #F5B63F;
  color: #222;
  padding: 12px 24px;
  font-weight: bold;
}
.alert a {
  color: #222;
  text-decoration: underline;
}

/* Elements */

.main-ul {
  margin: 0;
  padding: 0;
  padding-left: 36px;
}
.main-ul li {
  margin: 0;
  padding: 3px 0;
}
.main-dates {
  font-size: 16px;
  font-weight: normal;
  display: flex;
  align-items: center;
}
.main-calendar {
  width: 60px;
  margin-right: 20px;
}
.main-text {
  margin: 20px 0 40px 0;
  display: flex;
  flex-direction: column;
}
.main .btn,
.main .btn:visited {
  background-color: #F5B63F;
  color: #222;
  text-decoration: none;
  padding: 15px 25px;
  font-size: 20px;
  font-family: 'JosefinSans', Arial, Helvetica, sans-serif;
  font-weight: bold;
}
.main-arrow {
  height: 14px;
  margin-left: 10px;
}
.aside-list {
  list-style-type: none;
  padding: 0;
  font-size: 16px;
  font-weight: bold;
}
.aside-year {
  position: absolute;
  left: 215px;
  top: 75px;
  width: 110px;
}
.aside-message {
  margin: 24px 0 12px 0;
  font-size: 22px;
  max-width: 200px;
}
.aside-hashtag {
  color: #F5B63F;
  font-family: 'NunitoSans', Arial, Helvetica, sans-serif;
  font-weight: bold;
}

/* Speakers */

.speakers {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}
.speaker {
  display: flex;
  justify-content: center;
  margin-bottom: 20px;
  width: 100%;
}
.speaker-wrapper {
  display: flex;
  position: relative;
  width: 100%;
  max-width: 360px;
}
.speaker-desc {
  display: flex;
  flex-direction: column;
  background-color: #222;
  color: #dedede;
  width: 50px;
  padding: 5px;
}
.speaker-desc a {
  display: flex;
}
.speaker-name {
  font-family: 'JosefinSans', Arial, Helvetica, sans-serif;
  font-weight: bold;
  position: absolute;
  bottom: 20px;
  right: 20px;
  padding: 10px 16px;
  font-size: 20px;
  color: #222;
  background-color: #F5B63F;
}

@media (min-width: 900px) {
  .speaker {
    width: 49%;
  }
}

@media (min-width: 1200px) {
  .speaker {
    width: 31.5%;
  }
}


@media (min-width: 768px) {

  /* Layout */
  
  .wrapper {
    overflow: hidden;
    height: 100vh;
    display: grid;
    grid-template-columns: 325px 1fr;
    grid-template-rows: 65% 35%;
  }
  .aside-top {
    grid-column: 1;
    grid-row: 1;
  }
  .aside-bottom {
    grid-column: 1;
    grid-row: 2;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
  } 
  .main {
    grid-column: 2;
    grid-row: 1;
    height: 100vh;
    overflow-y: scroll;
  }
  .main-wrapper {
    margin: 60px;
  }
  .aside-wrapper {
    position: relative;
    margin: 30px 40px;
  }

  /* Elements */

  .aside-year {
    left: 195px;
    top: 50px;
  }
}

/* Logo transition */

.aside .logo-yellow,
.aside .logo-blue-1,
.aside .logo-blue-2,
.aside .logo-blue-3,
.aside .logo-red-1,
.aside .logo-red-2 {
  transition: 0.25s;
}
.aside:hover .logo-yellow {
  fill: #fc0;
}
.aside:hover .logo-blue-1 {
  fill: #96b9ff;
}
.aside:hover .logo-blue-2 {
  fill: #69f;
}
.aside:hover .logo-blue-3 {
  fill: #36c;
}
.aside:hover .logo-red-1 {
  fill: #ff3b3b;
}
.aside:hover .logo-red-2 {
  fill: #fd0000;
}

